# CarAudioDB

./: CMakeLists.txt  README.md  Thingy53_Color_Recognition_README.md  insert.js  queries.js
Color_collector/: CMakeLists.txt  prj.conf
Color_collector/src/: entry.c  main.cpp
Color_recogn/: CMakeLists.txt
Color_recogn/Color_collector/: CMakeLists.txt  prj.conf
Color_recogn/Color_collector/src/: entry.c  main.cpp
Color_recogn/ld/: enable_static_init_gnu.ld
Color_recogn/src/: cpp_runtime_shims.cpp  entry.c  main.cpp  static_init_flag.c
edge-impulse/: README.txt
edge-impulse/model-parameters/: model_metadata.h  model_variables.h
edge-impulse/tflite-model/: tflite_learn_750015_5_compiled.cpp  tflite_learn_750015_5_compiled.h
ld/: enable_static_init_gnu.ld
src/: cpp_runtime_shims.cpp  entry.c  main.cpp  static_init_flag.c
